--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "husky": "^8.0.1",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-animate": "^1.0.5"
   },
   "husky": {
     "hooks": {
