--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "save-dev": "^0.0.1-security",
     "simple-json-filter": "^0.3.0",
