--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "axios": "^0.27.2",
     "mdb-react-ui-kit": "^4.2.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
