--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "agent-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/build",
   "dependencies": {
     "-": "^0.0.1",
     "@auth0/auth0-react": "^1.12.0",
