dynamic form fields

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_ACCESS_KEY = e10b29a532-3dd36-d1675-36f4e-963c5
-REACT_APP_BASE_URL = 'https://api.cmicon.com/v3'
-REACT_APP_AUTH0_CLIENT_ID = 'Ghf0N6YaEH7g4RqwngYBt3WaItjDYvYy'
-REACT_APP_AUTH0_DOMAIN_ID = 'dev-o2t78sivaoy3il8i.us.auth0.com'
+REACT_APP_BASE_URL = https://api.cmicon.com/v3
+REACT_APP_AUTH0_CLIENT_ID = Ghf0N6YaEH7g4RqwngYBt3WaItjDYvYy
+REACT_APP_AUTH0_DOMAIN_ID = dev-o2t78sivaoy3il8i.us.auth0.com
 WDS_SOCKET_PORT=0
